Address code review comments:
- Use `1.1.0-SNAPSHOT` as version in metadata plugin README.adoc
  to be consistent w/ other examples

--- a/spring-cloud-dataflow-apps-plugin/spring-cloud-dataflow-apps-metadata-plugin/README.adoc
+++ b/spring-cloud-dataflow-apps-plugin/spring-cloud-dataflow-apps-metadata-plugin/README.adoc
@@ -67,7 +67,7 @@ The following example includes the `server.port` property and all properties fro
       <plugin>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dataflow-apps-metadata-plugin</artifactId>
-        <version>1.0.0</version>
+        <version>1.1.0-SNAPSHOT</version>
         <configuration>
           <storeFilteredMetadata>true</storeFilteredMetadata>
           <metadataFilter>
